Overflow fix

--- a/css/landing.css
+++ b/css/landing.css
@@ -1,5 +1,5 @@
 * {
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   text-align: center;
 }
 header {
@@ -7,7 +7,7 @@ header {
   background-size: 100%;
   background-repeat: no-repeat;
   padding-top: 15%;
-  height: 100vh;
+  min-height: 100vh;
   font-size: 12px;
 }
 a {
